<resources>
    <string name="app_name">Acemoney</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="register">Register</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
</resources>